--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,35 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+<div class="tk" ng-show="isfor">确定删除此项么？
+	<button ng-click='fuc()'>确定</button>
+	<button ng-click='fuv()'>取消</button>
+</div>
+<div class="beijing">
+	<div ng-repeat="t in data" class="fabiao">
+		<div class="cc">{{t.id}}</div>
+		<div class="tt">{{t.title}}</div>
+		<div class="mm"><button ng-click="Edit(t)">Modity</button></div>
+		<div class="dd"><button ng-click="Del(t)">Delete</button></div>
+
+	</div>
+	<div class="dianji"><button ng-click="Add()">+Add</button></div>
+	<div ng-show="isshow" class="fabiao1">
+		<div>
+				<div class="form-group">
+					<label for="exampleInputFile">上传文件</label>
+					<input type="file" id="exampleInputFile" onchange="setFiles(this)" multiple>
+				</div>
+			</div>
+		标题：<input type="text" placeholder="title" ng-model="c.title">
+		<!--<div class="cc1"><input type="text" placeholder="content" ng-model="c.content"></div>
+		<div class="mm1"><input type="text" placeholder="img"></div>-->
+		<input ng-model="c.content" type="text"> 详情：<textarea class="abc" name="" id="" cols="30" rows="10" ></textarea>
+		<!--<div class="tijiao"><button ng-click="Required()">Alter</button></div>
+		<div class="shangchuan"><button ng-click="AddRequired()">Submit</button></div>-->
+		
+		
+	</div>
 </div>
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div>
+<script>
+	$(".abc").summernote()
+	
+</script>
