--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -153,7 +153,16 @@
 	line-height: 30px;
 	background: rgba(128, 128, 128, 0.8);
 }
-
+.tupian{
+	width: 80px;
+	height: 30px;
+	font-size: 16px;
+	border-radius: 3px;
+	border: none;
+	cursor: pointer;
+	line-height: 30px;
+	background: rgba(128, 128, 128, 0.8);
+}
 .dianji {
 	height: 50px;
 	padding-left: 10px;
@@ -164,13 +173,14 @@
 	width: 50%;
 	color: #fff;
 	position: fixed;
-	border:1px solid #333333;
-	height:200px;
-	top: 50px;
-	
+	min-height:400px;
+	top: 20%;
+	background:#555555;
+	padding:20px;
+	display: block;
 }
 
-.tt1{
+/*.tt1{
 	float: left;
 	width: 80%;
 	height: 50px;
@@ -180,9 +190,11 @@
 .mm1 {
 	float: left;
 	width: 23.3%;
-	height: 50px;
+	height: 200px;
 }
-
+textarea{
+	height: 200px;
+}
 .mm1 input,
 .tt1 input,
 .cc1 input {
@@ -193,8 +205,16 @@
 	border-radius: 5px;
 	padding-left: 5px;
 	font-size: 16px;
+}*/
+.tt1{
+	width: 90%;
+	height: 30px;
+	border: 0;
+	background: rgba(128, 128, 128, 0.3);
+	border-radius: 5px;
+	padding-left: 5px;
+	font-size: 16px;
 }
-
 .tk {
 	position: absolute;
 	height: 150px;
