--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,3 +1,4 @@
+
 <div class="tk" ng-show="isfor">确定删除此项么？
 	<button ng-click='fuc()'>确定</button>
 	<button ng-click='fuv()'>取消</button>
@@ -6,11 +7,11 @@
 	<div ng-repeat="t in data" class="fabiao">
 		<div class="cc">{{t.id}}</div>
 		<div class="tt">{{t.title}}</div>
-		<div class="mm"><button ng-click="Edit(t)">Modity</button></div>
-		<div class="dd"><button ng-click="Del(t)">Delete</button></div>
+		<div class="mm"><button ng-click="Edit(t)">修改</button></div>
+		<div class="dd"><button ng-click="Del(t)">删除</button></div>
 
 	</div>
-	<div class="dianji"><button ng-click="Add()">+Add</button></div>
+	<div class="dianji"><button ng-click="Add()">添加</button></div>
 	<div ng-show="isshow" class="fabiao1">
 		<div>
 				<div class="form-group">
@@ -18,18 +19,17 @@
 					<input type="file" id="exampleInputFile" onchange="setFiles(this)" multiple>
 				</div>
 			</div>
-		标题：<input type="text" placeholder="title" ng-model="c.title">
-		<!--<div class="cc1"><input type="text" placeholder="content" ng-model="c.content"></div>
-		<div class="mm1"><input type="text" placeholder="img"></div>-->
-		<input ng-model="c.content" type="text"> 详情：<textarea class="abc" name="" id="" cols="30" rows="10" ></textarea>
-		<!--<div class="tijiao"><button ng-click="Required()">Alter</button></div>
-		<div class="shangchuan"><button ng-click="AddRequired()">Submit</button></div>-->
+			<button type="button" class="tupian" ng-click="uploadFiles()">提交图片</button><br /><br />
+		标题：<input class="tt1"type="text" placeholder="title" ng-model="updata.title"><br />
+		 详情：<textarea class="cc1" name="" id="" cols="30" rows="10" ></textarea>
+		<div class="tijiao"><button ng-click="Required()">修改</button></div>
+		<div class="shangchuan"><button ng-click="AddRequired()">提交</button></div>
+		<div class="shangchuan"><button ng-click="qxiao()">取消</button></div>
 		
 		
 	</div>
 </div>
-
 <script>
-	$(".abc").summernote()
+	$(".cc1").summernote()
 	
 </script>
