--- a/app/styles/page.css
+++ b/app/styles/page.css
@@ -6,19 +6,20 @@
     	}
     	.nav{
     		width:100%;
-    		height:45px;
+    		height: 50px;
+			background: rgba(128, 128, 128, 0.5);
+			border-radius: 3px;
+			box-shadow: 0 1px 10px #080808;
+			margin-bottom: 5px;
     	}
     	.nav li{
     		width:25%;
     		height:45px;
     		float:left;
-    		color:#114263;
     		font-size:18px;
     		line-height:45px;
-    		background:#E1E1E1;
     		list-style:none;
     		text-align: center;
-    		border-bottom:1px solid #D3D3D3;
     	}
     	.title{
     		width:25%;
