--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,9 @@
-
+<div class="biaoti">
+					<span>id</span>
+					<span>TITLE</span>
+					<span>MODIFY</span>
+					<span>DELETE</span>
+				</div>
 <div class="tk" ng-show="isfor">确定删除此项么？
 	<button ng-click='fuc()'>确定</button>
 	<button ng-click='fuv()'>取消</button>
