--- a/app/views/page.html
+++ b/app/views/page.html
@@ -27,6 +27,25 @@
 					<button ng-click="save()" class="save">save</button>
 	   				<button ng-click="addsave()" class="sub">submit</button>
 	   				<button ng-click="yc()" class="yc">X</button>
+	   				
+
+				<!--<form role="form">
+				  <div class="form-group">
+				    <label for="exampleInputEmail1">Title</label>
+				    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Title" ng-model="s.title" class="tit">
+				  </div>
+				  <div class="form-group">
+				    <label for="exampleInputPassword1">Summary</label>
+				    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Summary" ng-model="s.summary" class="sum">
+				  </div>
+				  <div class="form-group">
+				    <label for="exampleInputPassword1">Content</label>
+				    <textarea class="abc" cols="30" rows="10"></textarea>
+				  </div>
+				  <button type="submit" class="btn btn-default" ng-click="save()">Save</button>
+				  <button type="submit" class="btn btn-default" ng-click="addsave()">Submit</button>
+	   				<button type="button" class="close" ng-click="yc()"><span aria-hidden="true"class="yc">&times;</span><span class="sr-only">Close</span></button>	   			-->
+	   				
 	   			</div>
 			</div>
 			
