--- a/app/views/page.html
+++ b/app/views/page.html
@@ -17,19 +17,7 @@
 				</div>
 				<input type="button" value="添加" ng-click='tj()' />
 				<div ng-show="f" class="show">
-					<p class="title_t">Title:</p>
-	  					<input type="text" ng-model="s.title" class="tit">
-	  				<p class="summary_t">Summary:</p>
-	  					<input type="text" ng-model="s.summary" class="sum">
-	   				<p class="content_t">Content:</p>
-	   					<textarea class="abc" ng-model="s.content" cols="30" rows="10"></textarea>
-				
-					<button ng-click="save()" class="save">save</button>
-	   				<button ng-click="addsave()" class="sub">submit</button>
-	   				<button ng-click="yc()" class="yc">X</button>
-	   				
-
-				<!--<form role="form">
+				<form role="form">
 				  <div class="form-group">
 				    <label for="exampleInputEmail1">Title</label>
 				    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Title" ng-model="s.title" class="tit">
@@ -44,7 +32,7 @@
 				  </div>
 				  <button type="submit" class="btn btn-default" ng-click="save()">Save</button>
 				  <button type="submit" class="btn btn-default" ng-click="addsave()">Submit</button>
-	   				<button type="button" class="close" ng-click="yc()"><span aria-hidden="true"class="yc">&times;</span><span class="sr-only">Close</span></button>	   			-->
+	   				<button type="button" class="close" ng-click="yc()"><span aria-hidden="true"class="yc">&times;</span><span class="sr-only">Close</span></button>	   			
 	   				
 	   			</div>
 			</div>
